@@ -1,3 +1,9 @@
+2008-12-19  Jan Nijtmans  <nijtmans@users.sf.net>
+
+    * generic/tclInt.decls CONSTify TclGetLoadedPackages second param
+    * generic/tclLoad.c
+    * generic/tclIntDecls.h (regenerated)
+
 2008-12-19  Don Porter	<dgp@users.sourceforge.net>
 
 	* unix/Makefile.in:	Update `make dist` target to include the files
